Added a table of counts of different sentence types.

--- a/article/sigproc-sp.tex
+++ b/article/sigproc-sp.tex
@@ -287,11 +287,11 @@ Manual inspection of cluster output reveals several different similar sentence t
 \begin{itemize}[noitemsep,nolistsep]
 \item Bush had an approval rating of 22\% by the end of his term in 2008.
 \item Obama had an approval rating of 56\% by the end of his term in 2012.
+
 \end{itemize}
 From the perspective of editing/writing Wikipedia articles, this is a strong indicator that the author copied the original sentence and modified the relevant information to pertain to a different topic. What remains shared between both sentences though is the inherent structure.
 
 \emph{Direct Copying} occurs when the same sentence has been copied into another (or possibly the same) article. This can happen for many reasons, including articles that deal with similar subjects, or articles that are subtopics of other topics. (SOME EXAMPLES?). Similarly, \emph{Direct Copying with Copy Editing} occurs when the same sentence has been copied into another article and then one or both sentences has been edited for style or clarity. For example:
-
 \begin{itemize}[noitemsep,nolistsep]
 \item EXAMPLE HERE.
 \item EXAMPLE HERE.
@@ -313,9 +313,17 @@ Although factual drift is similar to copy editing and may occur along with copy 
 
 \subsubsection{Break down of sentence types}
 
-By manually counting a small sample of NNNN output clusters, we came up with the following breakdown of sentence types:
+By manually counting a small sample of 824 output clusters, we came up with the following breakdown of sentence types:
 
-INSERT CLASSIFY CLUSTER BREAKDOWN HERE
+\begin{tabular}{l l}
+NOT\_SIMILAR & 3 \\
+FACTUAL\_DRIFT & 65 \\
+TEMPLATE & 52 \\
+REFERENCE & 23 \\
+COPY\_EDIT & 214 \\
+OTHER & 12 \\
+IDENTICAL & 455 \\
+\end{tabular}
 
 \subsection{Sentence Similarity as a Measure of Article Similarity}
 
